--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>git up-ze atvirtva</h1>
+    <button>click me!</button>
+    <img src="https://tse2.mm.bing.net/th?id=OIP.wl-2TDOvTBnfJ7duJ_9X-wHaE8&pid=Api&P=0&h=220" alt="">
 </body>
 </html>
