--- a/index.html
+++ b/index.html
@@ -9,5 +9,22 @@
     <h1>git up-ze atvirtva</h1>
     <button>click me!</button>
     <img src="https://tse2.mm.bing.net/th?id=OIP.wl-2TDOvTBnfJ7duJ_9X-wHaE8&pid=Api&P=0&h=220" alt="">
+    <table border="2">
+        <tr>
+            <td colspan="2">nika gzirishvili</td>
+        </tr>
+        <tr>
+            <td>age</td>
+            <td>17</td>
+        </tr>
+        <tr>
+            <td>country</td>
+            <td>georgia</td>
+        </tr>
+        <tr>
+            <td>city</td>
+            <td>tbilisi</td>
+        </tr>
+    </table>
 </body>
 </html>
